--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
+        <marquee class="slide" behavior="scroll" direction="rigth">Admission Open!!!</marquee>
         <div class="banner">
             <div class="banner-container">
                 <div class="banner-content">
