added meaningfull texts

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
                     <div class="curriculam-card card-bg-1">
                         <img class="curriculam-img" src="assets/kinder.png" alt="">
                         <h3 class="curriculam-title">Kinder (3-6) Years</h3>
-                        <p class="curriculam-description raleway-normal">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                        <p class="curriculam-description raleway-normal"> At this stage your kids learn to interact with people and make new friends. They will learn new things.</p>
                         <button class="curriculam-btn"><a class="blue" href="">Read More</a></button>
                     </div>
                     <div class="curriculam-card card-bg-2">
                         <img class="curriculam-img" src="assets/elementary.png" alt="">
                         <h3 class="curriculam-title">Elementary School</h3>
-                        <p class="curriculam-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                        <p class="curriculam-description">Time managment is important. At this your kids will learn to manage their time, and do thei homework properly.</p>
                         <button class="curriculam-btn"><a class="ligthorange" href="">Read More</a></button>
                     </div>
                     <div class="curriculam-card card-bg-3">
                         <img class="curriculam-img" src="assets/middle.png" alt="">
                         <h3 class="curriculam-title">Middle (10-16) Years</h3>
-                        <p class="curriculam-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                        <p class="curriculam-description">science is important. At this stage your kids will interact with more sceitific things. they will learn science here.</p>
                         <button class="curriculam-btn"><a class="puprle-2" href="">Read More</a></button>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                     <h3 class="title-1">Kids Education</h3>
                 </div>
                 <div class="main-content">
-                    <p class="description">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                    <p class="description">Where Learning is Fun and Imagination Soars! Our platform nurtures curious minds with engaging lessons, interactive activities, and endless opportunities to grow. Start your child's educational adventure today</p>
                 </div>
             </div>
             <div class="footer-content-2">
