--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="curriculam-card card-bg-3">
                         <img class="curriculam-img" src="assets/middle.png" alt="">
                         <h3 class="curriculam-title">Middle (10-16) Years</h3>
-                        <p class="curriculam-description">science is important. At this stage your kids will interact with more sceitific things. they will learn science here.</p>
+                        <p class="curriculam-description">science is important. At this stage your kids will interact with more sceitific things. They will learn science here.</p>
                         <button class="curriculam-btn"><a class="puprle-2" href="">Read More</a></button>
                     </div>
                 </div>
